--- a/package.json
+++ b/package.json
@@ -28,9 +28,11 @@
     "styled-components": "^6.0.0"
   },
   "devDependencies": {
+    "@playwright/test": "^1.53.1",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "playwright": "^1.53.1",
     "typescript": "^5"
   },
   "engines": {
